# berth

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  PRODUCT_VISION.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tasks.md  vite.config.ts
.github/workflows/: pages.yml  release-agent.yml  release-app.yml
crates/berth-agent/: Cargo.toml
crates/berth-agent/src/: agent_scheduler.rs  agent_store.rs  archive.rs  container.rs  containerfile.rs  executor.rs  main.rs  nats_cmd_handler.rs  nats_publisher.rs  pairing.rs  persistent_service.rs  service.rs  setup.rs  tunnel.rs  update.rs
crates/berth-cli/: Cargo.toml
crates/berth-cli/src/: main.rs
crates/berth-core/: Cargo.toml  build.rs
crates/berth-core/src/: agent_client.rs  agent_service.rs  agent_transport.rs  archive.rs  auth.rs  container.rs  containerfile.rs  credentials.rs  discovery.rs  executor.rs  lib.rs  local_agent.rs  nats_cmd_client.rs  nats_relay.rs  nats_subscriber.rs  path_safety.rs  project.rs  runtime.rs  scheduler.rs  setup.rs  store.rs  supabase.rs  target.rs  telemetry.rs  template_store.rs  tls.rs  uds.rs
crates/berth-core/src/runtime/: detect.rs  mod.rs
crates/berth-core/tests/: remote_agent.rs
crates/berth-mcp/: Cargo.toml
crates/berth-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
crates/berth-proto/: Cargo.toml  build.rs
crates/berth-proto/src/: env.rs  executor.rs  lib.rs  message_auth.rs  nats_relay.rs  runtime.rs  schedule.rs  transport.rs
crates/runway-agent/: Cargo.toml
crates/runway-agent/src/: agent_scheduler.rs  main.rs  nats_cmd_handler.rs  nats_publisher.rs  persistent_service.rs  service.rs  update.rs
crates/runway-cli/: Cargo.toml
crates/runway-cli/src/: main.rs
crates/runway-core/: Cargo.toml  build.rs
crates/runway-core/src/: agent_client.rs  agent_service.rs  agent_transport.rs  archive.rs  container.rs  credentials.rs  discovery.rs  executor.rs  lib.rs  nats_cmd_client.rs  nats_relay.rs  nats_subscriber.rs  project.rs  runtime.rs  scheduler.rs  setup.rs  store.rs  target.rs  tls.rs  uds.rs
crates/runway-core/tests/: remote_agent.rs
crates/runway-mcp/: Cargo.toml
crates/runway-mcp/src/: lib.rs  main.rs  server.rs  tools.rs
docs/: auth-bridge.html  index.html  remote-agent.html
proto/: berth.proto  runway.proto
public/themes/: _index.json  catppuccin.json  default.json  dracula.json  gruvbox.json  nord.json  one-dark.json  rose-pine.json  solarized.json  synthwave.json  tokyo-night.json
reasoning/: README.md
reasoning/crf/: runway-project.yaml
reasoning/drf/: 001-framework-selection.yaml  002-agent-language.yaml  003-product-positioning.yaml  004-business-model.yaml  005-mcp-as-core.yaml  006-backend-storage.yaml  007-agent-only-execution.yaml  008-business-model-v2.yaml  009-growth-strategy.yaml  010-go-live-requirements.yaml  011-naming-berth.yaml  012-auth-model.yaml  013-service-mode.yaml  014-license-model.yaml
scripts/: install-agent.sh  release.sh  runway-agent-rollback.sh  setup-nats.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: EnvVarsPanel.tsx  Sidebar.tsx  Terminal.tsx  Toast.tsx
src/components/onboarding/: CompletionStep.tsx  DeployStep.tsx  FeaturesStep.tsx  NatsStep.tsx  OnboardingLayout.tsx  StepIndicator.tsx  TargetStep.tsx  TelemetryStep.tsx  WelcomeStep.tsx
src/lib/: invoke.ts  theme.ts
src/pages/: Onboarding.tsx  PasteAndDeploy.tsx  ProjectDetail.tsx  ProjectList.tsx  Settings.tsx  Targets.tsx  TemplateStore.tsx
src/styles/: globals.css
workers/telemetry/: schema.sql  wrangler.toml
workers/telemetry/src/: index.ts
