[package]
name = "runway-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "runway_app"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "runway-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
runway-core = { path = "../crates/runway-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next = "2"
uuid = { workspace = true }
tonic = { workspace = true }
