[package]
name = "berth-app"
version = "0.2.0"
edition = "2021"

[lib]
name = "berth_app"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "berth-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
berth-core = { path = "../crates/berth-core", features = ["nats"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next = "2"
uuid = { workspace = true }
tonic = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
async-nats = { workspace = true }
semver = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
sha2 = { workspace = true }
hex = "0.4"
