[package]
name = "berth-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "berth-agent"
path = "src/main.rs"

[dependencies]
berth-core = { path = "../berth-core", features = ["nats"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tonic = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1"
dirs-next = "2"
sysinfo = "0.33"
async-nats = { workspace = true }
base64 = "0.22"
futures = "0.3"
sha2 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
