[package]
name = "berth-cli"
version = "0.1.9"
edition = "2021"

[[bin]]
name = "berth"
path = "src/main.rs"

[dependencies]
berth-core = { path = "../berth-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs-next = "2"
