[package]
name = "berth-mcp"
version = "0.1.9"
edition = "2021"

[[bin]]
name = "berth-mcp"
path = "src/main.rs"

[dependencies]
berth-core = { path = "../berth-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs-next = "2"
