[package]
name = "berth-mcp"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "berth-mcp"
path = "src/main.rs"

[dependencies]
berth-core = { path = "../berth-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs-next = "2"
