[package]
name = "berth-proto"
version = "0.2.0"
edition = "2021"
description = "Shared protocol types for Berth agent-app communication"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
rand = "0.8"

[build-dependencies]
tonic-build = { workspace = true }
