[package]
name = "runway-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runway-agent"
path = "src/main.rs"

[dependencies]
runway-core = { path = "../runway-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = { workspace = true }
