[package]
name = "runway-cli"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "runway"
path = "src/main.rs"

[dependencies]
runway-core = { path = "../runway-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs-next = "2"
