[package]
name = "runway-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tar = "0.4"
flate2 = "1"
rcgen = "0.14"
time = "0.3"
dirs-next = "2"
mdns-sd = "0.12"
hostname = "0.4"
sysinfo = "0.33"
tokio-stream = "0.1"
tower = "0.5"
hyper-util = "0.1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
