[package]
name = "runway-mcp"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "runway-mcp"
path = "src/main.rs"

[dependencies]
runway-core = { path = "../runway-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs-next = "2"
